--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -2,7 +2,7 @@ name: Download data
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "*/2 * * * *"
 
 concurrency:
   group: "download"
@@ -17,6 +17,9 @@ jobs:
     name: "Download exchange rates"
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -28,3 +31,6 @@ jobs:
         run: wget https://www.ecb.europa.eu/stats/eurofxref/eurofxref-hist.xml -O ecb-historic.xml
       - name: Download IMF data
         run: wget https://www.imf.org/external/np/fin/data/rms_five.aspx?tsvflag=Y -O imf.tsv
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Updated exchange rate data from ECB and IMF
